--- a/netlify.toml
+++ b/netlify.toml
@@ -4,19 +4,8 @@
 
 # Redirect logixfleet.com to logixfleet.ai
 [[redirects]]
-  from = "https://logixfleet.com/*"
-  to = "https://logixfleet.ai/:splat"
-  status = 301
-  force = true
-
-[[redirects]]
-  from = "https://www.logixfleet.com/*"
-  to = "https://logixfleet.ai/:splat"
-  status = 301
-  force = true
-
-# Handle client-side routing
-[[redirects]]
   from = "/*"
-  to = "/index.html"
-  status = 200
+  to = "https://logixfleet.ai/:splat"
+  status = 301
+  force = true
+  conditions = {Host = ["logixfleet.com", "www.logixfleet.com"]}
